package protoTest;			//不要遗漏了分号

enum Enum {C = 12;};			//不定枚举

message TestMsg {
 	required int32 id = 1;     		//必需 required
	optional string name = 2; 		//可选 optional
	repeated int32 reps = 3;			//数组 repeated
 	oneof union {					//择一 (单一出现) oneof
		string names = 4;
		int32 number = 5;
	}
	optional group OptionalGroup = 6 {		//结构体 group
    required string groupId = 5;
  }
}
